--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mapir-react-native-sdk",
-  "version": "2.0.2",
+  "version": "2.0.4",
   "main": "src/index.js",
   "_phantomChildren": {
     "@babel/core": "7.2.2",
@@ -50,7 +50,7 @@
     "@babel/plugin-transform-typescript": "7.2.0",
     "@babel/plugin-transform-unicode-regex": "7.2.0",
     "@babel/register": "7.0.0",
-    "@babel/runtime": "7.2.0",
+    "@babel/runtime": "7.0.0-beta.55",
     "@babel/template": "7.2.2",
     "@babel/traverse": "7.2.3",
     "@babel/types": "7.2.2",
@@ -156,7 +156,7 @@
   "author": "reyhane masumi <r.masumi94@gmail.com>",
   "bundleDependencies": false,
   "dependencies": {
-    "mapir-mapbox": "2.0.1"
+    "mapir-mapbox": "2.0.2"
   },
   "deprecated": false,
   "devDependencies": {
