--- a/package.json
+++ b/package.json
@@ -50,7 +50,6 @@
     "@babel/plugin-transform-typescript": "7.2.0",
     "@babel/plugin-transform-unicode-regex": "7.2.0",
     "@babel/register": "7.0.0",
-
     "@babel/runtime": "7.0.0-beta.55",
     "@babel/template": "7.2.2",
     "@babel/traverse": "7.2.3",
@@ -158,7 +157,8 @@
   "author": "reyhane masumi <r.masumi94@gmail.com>",
   "bundleDependencies": false,
   "dependencies": {
-    "mapir-mapbox": "2.0.6"
+    "mapir-mapbox": "2.0.6",
+    "axios": "^0.19.2"
   },
   "deprecated": false,
   "devDependencies": {
@@ -181,7 +181,6 @@
     "npm",
     "module",
     "node",
-
     "javascript",
     "mapir"
   ],
